style: fix alignment on nav button

--- a/src/assets/styles/components/_nav-mobile.scss
+++ b/src/assets/styles/components/_nav-mobile.scss
@@ -104,7 +104,7 @@
 		display: flex;
 
 		.icon-button {
-			margin-left: 24px;
+			margin-left: 12px;
 			color: var(--text-primary);
 
 			svg {
